--- a/supercon2/config.yaml
+++ b/supercon2/config.yaml
@@ -1,4 +1,5 @@
 mongo:
   server: "localhost:27017"
 #  server: "falcon.nims.go.jp:27017"
-  db: "supercon_dev_2"
+  db: "supercon_sakai"
+#  db: "supercon_tmp"
