--- a/supercon2/config.yaml
+++ b/supercon2/config.yaml
@@ -1,4 +1,4 @@
 mongo:
-  server: "localhost:27017"
-#  server: "falcon.nims.go.jp:27017"
-  db: "supercon_dev_2"
+  # server: "localhost:27017"
+  server: "falcon.nims.go.jp:27017"
+  db: "supercon_sakai"
