--- a/supercon2/config-docker.yaml
+++ b/supercon2/config-docker.yaml
@@ -1,5 +1,5 @@
 mongo:
-  server: "localhost:27017"
+  server: "mongo.local:27017"
 #  server: "falcon.nims.go.jp:27017"
-  db: "supercon_tmp"
+  db: "supercon2"
 #  db: "supercon_dev_1203"
