--- a/process/config.yaml
+++ b/process/config.yaml
@@ -12,7 +12,7 @@ grobid:
 mongo:
 #  server: "falcon.nims.go.jp:27017"
   server: "localhost:27017"
-  db: "supercon_dev_2"
+  db: "supercon_correction"
 
 batch_size: 1000
 
