--- a/.github/workflows/ci-build-unstable.yml
+++ b/.github/workflows/ci-build-unstable.yml
@@ -40,4 +40,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag lfoppiano/supercon2:latest
+        run: docker build . --file Dockerfile --tag lfoppiano/supercon2:develop-latest
