--- a/supercon2/config.yaml
+++ b/supercon2/config.yaml
@@ -1,5 +1,6 @@
 mongo:
   server: "localhost:27017"
-#  server: "falcon.nims.go.jp:27017"
-  db: "supercon_tmp"
-#  db: "supercon_dev_1203"
+  #  server: "falcon.nims.go.jp:27017"
+  #  db: "supercon_tmp"
+  #  db: "supercon_dev_4"
+  db: "supercon_sample"
