--- a/supercon2/config.yaml
+++ b/supercon2/config.yaml
@@ -5,6 +5,8 @@ mongo:
   #  db: "supercon_dev_4"
   #  db: "supercon_sample"
 
+root-path: '/'
+
 label-studio:
   url: "http://falcon.nims.go.jp/label-studio"
   project_id: "1"
