--- a/.github/workflows/ci-build-unstable.yml
+++ b/.github/workflows/ci-build-unstable.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag lfoppiano/supercon2:develop-latest
       - name: Cleanup older than 24h images and containers
-        run: docker cleanup --filter "until=24h" --force
+        run: docker system prune --filter "until=24h" --force
