--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: SuperCon 2 Documentation
 repo_url: https://github.com/lfoppiano/supercon2
 repo_name: GitHub
 site_description: Guidelines for SuperCon 2 curation for SuperCon database
-docs_dir: .
+docs_dir: docs
 plugins:
   - search
 theme:
